--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,7 +25,6 @@
 <div class="login-popup-overlay" *ngIf="isLoginPopupOpen" (click)="closeLoginPopup()">
   <div class="login-popup" (click)="$event.stopPropagation()">
     <button class="close-btn" (click)="closeLoginPopup()">&times;</button>
-    <h2 class="popup-title">Login</h2>
-    <p class="popup-placeholder">Login form will be added here</p>
+    <app-login></app-login>
   </div>
 </div>
