khedma bnt qhba

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,8 @@
     <!-- Home Section -->
     <section id="home" class="section home-section">
         <div class="hero-content">
+
+            <app-img-slider></app-img-slider>
             <h1 class="hero-title">Welcome to Our Platform</h1>
             <p class="hero-subtitle">Build amazing things with our powerful tools</p>
         </div>
